# checkmate-backend

./: .env  .gitignore  Cargo.toml  README.md  index.js  nodemon.json  package-lock.json  package.json
.github/workflows/: sync-upstream-backend.yml
controllers/: authController.js  checkController.js  controllerUtils.js  distributedUptimeController.js  inviteController.js  maintenanceWindowController.js  monitorController.js  notificationController.js  queueController.js  settingsController.js  statusPageController.js
db/models/: AppSettings.js  Check.js  DistributedUptimeCheck.js  Monitor.js  Notification.js  StatusPage.js  User.js
db/mongo/: MongoDB.js
docker/dev/: build_images.sh  client.Dockerfile  docker-compose.yaml
docker/prod/: client.Dockerfile  docker-compose.yaml  server.Dockerfile
docker/test/: build_images.sh  client.Dockerfile  docker-compose.yaml
locales/: en.json  en.json.bak
middleware/: handleErrors.js  isAllowed.js  languageMiddleware.js  responseHandler.js  verifyJWT.js  verifyOwnership.js  verifySuperAdmin.js
routes/: authRoute.js  checkRoute.js  distributedUptimeRoute.js  monitorRoute.js  notificationRoute.js  queueRoute.js  statusPageRoute.js
service/: jobQueue.js  networkService.js  notificationService.js  settingsService.js  statusService.js  stringService.js  translationService.js
src/: main.rs
src/core/: configs.rs  error.rs  helpers.rs  mod.rs  state.rs
templates/: addReview.mjml  serverIsDown.mjml
tests/controllers/: authController.test.js
utils/: dataUtils.js  demoMonitors.json  utils.js
validation/: joi.js
(+20 files in other folders)
