[package]
name = "uptime-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
dotenv = "0.15.0"
lambda_http = "0.13.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres","uuid"] }
once_cell = "1.19.0"

tokio = { version = "1", features = ["macros", "full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4","serde"] }
aws-config =  { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.59.0"
sha2 = "0.10.8"
tower-governor = "0.3"
time = { version = "0.3", features = ["serde"] }